Remove unused imports/members
Signed-off-by: Fred Bricon <fbricon@gmail.com>